# wgsl-experiments

./: .gitignore  Cargo.toml  README.md
src/: bigint_add.rs  bigint_add.wgsl  bigint_cmp.rs  bigint_cmp.wgsl  bigint_double.rs  bigint_double.wgsl  bigint_eq.rs  bigint_eq.wgsl  bigint_gt.rs  bigint_gt.wgsl  bigint_sqr.rs  bigint_sqr.wgsl  bigint_sub.rs  bigint_sub.wgsl  bn254_field_sqr.rs  bn254_field_sqr.wgsl  code_size_limit.rs  code_size_limit.wgsl  display_limits.rs  field_add.rs  field_add.wgsl  field_mul.rs  field_mul.wgsl  field_mul_mont.rs  field_mul_mont.wgsl  field_reduce.rs  field_reduce.wgsl  field_small_scalar_shift.rs  field_small_scalar_shift.wgsl  field_sqr.rs  field_sqr.wgsl  field_sub.rs  field_sub.wgsl  gen_code_size_limit_wgsl.py  get_higher_with_slack.rs  gpu.rs  jacobian_add.rs  jacobian_add.wgsl  jacobian_dbl.rs  jacobian_dbl.wgsl  (+11 more)
src/parallel/: main.rs
