[package]
name = "wgsl-experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.16.1"
pollster = "0.2"
futures-intrusive = "0.4"
bytemuck = "1.13"
stopwatch = "0.0.7"
num-bigint = { version = "0.4.3", features = ["rand"] }
num-traits = "0.2.15"
rand = "0.8.5"
itertools = "0.11.0"
